chore: update spring boot to version 3

--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.7</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>3.0.1</version>
+    <relativePath/>
   </parent>
   <groupId>org.eclipse.tractusx.puris</groupId>
   <artifactId>puris-backend</artifactId>
@@ -38,8 +38,9 @@
   <description>PURIS Backend</description>
   <properties>
     <java.version>11</java.version>
-    <springdoc.version>1.6.8</springdoc.version>
+    <springdoc.version>2.0.2</springdoc.version>
     <okhttp3.version>2.7.5</okhttp3.version>
+    <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
   </properties>
   <dependencies>
     <dependency>
@@ -92,13 +93,19 @@
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp</groupId>
       <artifactId>okhttp</artifactId>
       <version>${okhttp3.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
     </dependency>
   </dependencies>
 
@@ -158,5 +165,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
